ocp-sample-deployment-config.yml
---
#######################################################
### Image Stream Construct                          ###
#######################################################
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: dc-sample-app
    name: dc-sample-app
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: jboss/wildfly
      from:
        kind: DockerImage
        name: jboss/wildfly
      generation: null

      importPolicy: {}
      name: 11.0.0.Final
      #name: latest
      referencePolicy:
        type: ""

      ########################################
      ## Watch external Registry (jFrog)    ##
      ## for Image Tag Changes : latest-dev ##
      ########################################
      #importPolicy:
        #scheduled: true
      #name: "latest-dev"
      #referencePolicy:
        #type: Source

  status:
    dockerImageRepository: ""

######################################################
### Deployment Config Construct                     ##
######################################################
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: dc-sample-app
    name: dc-sample-app
  spec:
    replicas: 1
    selector:
      app: dc-sample-app
      deploymentconfig: dc-sample-app
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: dc-sample-app
          deploymentconfig: dc-sample-app
      spec:

        ################################################
        ## Provide an application with a unique       ##
        ## identity in order to control access to     ##
        ## resources on a fine grain                  ##
        ################################################
        serviceAccountName: sa-ocp-sample-app

        ################################################
        ## podAntiAffinity Rule                       ##
        ## Only one Pod will be scheduled on one Node ##
        ################################################
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - dc-sample-app
              topologyKey: kubernetes.io/hostname

        ########################################
        ## Pod Security Context               ##
        ## Container cannot run as root       ##
        ########################################
        securityContext:
          runAsNonRoot: true

        ########################################
        ## Graceful shutdown of Pods          ##
        ## 15 Seconds to terminate            ##
        ## Amount of time to wait for a       ##
        ## SIGTERM to run until a SIGKILL     ##
        ## is used                            ##
        ########################################
        terminationGracePeriodSeconds: 15

        ##################################################
        ## Shared PID Namespaces                        ##
        ## beta in Kubernetes 1.10                      ##
        ## enable with PodShareProcessNamespace         ##
        ## makes sidecar containers more powerful       ##
        ## send a SIGHUP signal to reload configuration ##
        ##################################################
        #shareProcessNamespace: true

        containers:
        - env:

          ########################################
          ## Secrets                            ##
          ########################################
          - name: KEYCLOAK_TOKEN_CLIENT_SECRET
            valueFrom:
              secretKeyRef:
                name: scr-env-sample-app-secret
                key: scr-KEYCLOAK_TOKEN_CLIENT_SECRET

          ########################################
          ## Environmental Variables            ##
          ########################################
          - name: APPLICATION_SERVICE_PORT
            valueFrom:
              configMapKeyRef:
                name: cm-env-sample-app-environment
                key: sample-app-APPLICATION_SERVICE_PORT
          - name: APPLICATION_SERVICE_URL
            valueFrom:
              configMapKeyRef:
                name: cm-env-sample-app-environment
                key: sample-app-APPLICATION_SERVICE_URL
          - name: DEBUG
            valueFrom:
              configMapKeyRef:
                name: cm-env-sample-app-environment
                key: sample-app-DEBUG
          - name: FORM_SERVICE_PORT
            valueFrom:
              configMapKeyRef:
                name: cm-env-sample-app-environment
                key: sample-app-FORM_SERVICE_PORT
          - name: FORM_SERVICE_URL
            valueFrom:
              configMapKeyRef:
                name: cm-env-sample-app-environment
                key: sample-app-FORM_SERVICE_URL
          - name: KEYCLOAK_AUTH_SERVER_URL
            valueFrom:
              configMapKeyRef:
                name: cm-env-sample-app-environment
                key: sample-app-KEYCLOAK_AUTH_SERVER_URL
          - name: KEYCLOAK_REALM
            valueFrom:
              configMapKeyRef:
                name: cm-env-sample-app-environment
                key: sample-app-KEYCLOAK_REALM
          - name: KEYCLOAK_TOKEN_CLIENT_ID
            valueFrom:
              configMapKeyRef:
                name: cm-env-sample-app-environment
                key: sample-app-KEYCLOAK_TOKEN_CLIENT_ID
          - name: KEYCLOAK_VALIDATION_CLIENT_ID
            valueFrom:
              configMapKeyRef:
                name: cm-env-sample-app-environment
                key: sample-app-KEYCLOAK_VALIDATION_CLIENT_ID
          - name: NODE_ENV
            valueFrom:
              configMapKeyRef:
                name: cm-env-sample-app-environment
                key: sample-app-NODE_ENV
          - name: PORT
            valueFrom:
              configMapKeyRef:
                name: cm-env-sample-app-environment
                key: sample-app-PORT
          - name: REFERENCE_SERVICE_PORT
            valueFrom:
              configMapKeyRef:
                name: cm-env-sample-app-environment
                key: sample-app-REFERENCE_SERVICE_PORT
          - name: REFERENCE_SERVICE_URL
            valueFrom:
              configMapKeyRef:
                name: cm-env-sample-app-environment
                key: sample-app-REFERENCE_SERVICE_URL

          image: jboss/wildfly:11.0.0.Final
          name: dc-sample-app
          ports:
          - containerPort: 8080
            protocol: TCP
          resources:

            ######################################################
            ## Resource Management                              ##
            ## CPU Initial Request    = 0.5 cores               ##
            ## Memory Initial Request = 512 MB                  ##
            ## CPU Upper Limit        = 1.0 cores               ##
            ## Memory Upper Limit     = 2048 MB                 ##
            ######################################################
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2048Mi"

          ########################################
          ## Device Plugin system               ##
          ## beta in Kubernetes 1.10            ##
          ## scheduled on node with 2 free GPU  ##
          ########################################
          #resources:
            #limits:
              #nvidia.com/gpu: 2

          ########################################
          ## livenessProbe                      ##
          ## Is the application healthy         ##
          ## Perform health check on port 8080  ##
          ########################################
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3

          ########################################
          ## readinessProbe                     ##
          ## Is the application ready           ##
          ## Perform ready check on port 8080   ##
          ########################################
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3

          ########################################
          ## Empty Directory used for cache     ##
          ## temporary directory destroyed      ##
          ## when pod terminates                ##
          ########################################
          volumeMounts:
            - name: cache-directory
              mountPath: "/cache"
              readOnly: false
        volumes:
          - name: cache-directory
            emptyDir: {}

    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - dc-sample-app
        from:
          kind: ImageStreamTag
          name: dc-sample-app:11.0.0.Final
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
kind: List
metadata: {}
---
#######################################################
#### End of Section                                  ##
#######################################################
