ocp-sample-network-policy.yml
---
######################################################
### Network Policy                                  ##
### Control pods incoming connection                ##
### Based on Labels                                 ##
######################################################
## Web Tier communicates with App tier   tier: web  ##
## App Tier communicates with DB  tier   tier: app  ##
## DB  Tier communicates with App tier   tier: db   ##
######################################################

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-access-sample-app
  namespace: pr-sample-application
spec:
  podSelector:
  matchLabels:

## This policy applies to this label
    app: dc-sample-app
    tier: app

ingress:
- from:
  - podSelector:
      matchLabels:

## Allow access from this label
        tier: web

ports:
- protocol: TCP

## To this port
  port: 8080
---
#######################################################
#### End of Section                                  ##
#######################################################
